--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-owl-carousel": "^2.3.3",
     "react-scripts": "5.0.1",
     "sass": "^1.62.0",
     "typescript": "^4.9.5",
